--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 
 
   <hr>
-  <a href="Hobbies.html">My Hobbies</a>
-  <a href="contact.html">My Contact</a>
+  <a href="hobbies.html">My Hobbies</a>
+  <a href="Contact.html">My Contact</a>
 </body>
 
 </html>
